--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,7 @@ ext {
     /* build plugins versions */
     build = [
             gradle: "3.0.0-beta2",
-            kotlin: "1.1.4",
+            kotlin: "1.1.4-2",
     ]
 
     buildPlugins = [
@@ -20,7 +20,7 @@ ext {
     ]
 
     /* dependency version */
-    def androidSupportLibs = '26.0.0-beta1'
+    def androidSupportLibs = '26.0.1'
     def constraintLayoutVersion = '1.0.2'
     def jUnitVersion = '4.12'
     def mockitoVersion = '2.8.47'
@@ -40,7 +40,7 @@ ext {
     def stethoOkHttpVersion = "1.5.0"
     def extensiblePageIndicatorVersion = '1.0.1'
     def butterKnifeVersion = '8.6.0'
-    def glideVersion = '4.0.0-RC1'
+    def glideVersion = '4.0.0'
     def rippleVersion = '1.3.1'
     def calligraphyVersion = '2.3.0'
     def multiSectionVersion = 'v0.1'
@@ -53,6 +53,7 @@ ext {
     def lottieVersion = '2.0.0'
     def groupieVersion = '2.0.0-alpha2'
     def noiseViewVersion = '1.0'
+    def smallBangVersion = '0.1.2'
 
     def libs = [
             /* support */
@@ -105,6 +106,7 @@ ext {
             lottie                      : [group: 'com.airbnb.android', name: 'lottie', version: lottieVersion],
             groupie                     : [group: 'com.xwray', name: 'groupie', version: groupieVersion],
             noiseView                   : [group: 'pl.hypeapp', name: 'noiseview', version: noiseViewVersion],
+            smallBang                   : [group: 'hanks.xyz', name: 'smallbang-library', version: smallBangVersion],
             // For some reason gradle cannot resolve version of this dependency and must be hardcoded in that way.
             androidAnimations           : "com.daimajia.androidanimations:library:$androidAnimationsVersion"
     ]
@@ -152,6 +154,7 @@ ext {
             [configuration: "implementation", dependency: libs.lottie],
             [configuration: "implementation", dependency: libs.groupie],
             [configuration: "implementation", dependency: libs.noiseView],
+            [configuration: "implementation", dependency: libs.smallBang],
             // dependency injection
             [configuration: "implementation", dependency: libs.butterKnife],
             [configuration: "kapt", dependency: libs.butterKnifeCompiler],
