--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -1,30 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          package="pl.hypeapp.episodie">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="pl.hypeapp.episodie">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        tools:replace="android:label"
         android:name=".App"
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:hardwareAccelerated="true"
-        android:theme="@style/EpisodieTheme">
+        android:theme="@style/EpisodieTheme"
+        tools:replace="android:label">
 
         <activity android:name=".ui.features.mainfeed.MainFeedActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.features.tvshowdetails.TvShowDetailsActivity">
+        <activity
+            android:name=".ui.features.tvshowdetails.TvShowDetailsActivity"
+            android:theme="@style/EpisodieTheme.TvShowDetailsActivityTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".ui.features.search.SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
