--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         apply from: 'dependencies.gradle'
         classpath buildPlugins.gradle
         classpath buildPlugins.kotlin
+        classpath 'com.frogermcs.androiddevmetrics:androiddevmetrics-plugin:0.5'
     }
 }
 
