Add: android dev metrics plugin Update: dependencies. Deleted: drawable.

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -4,6 +4,7 @@ apply plugin: 'jacoco'
 rootProject.applicationModulePlugins.each {
     apply plugin: it
 }
+apply plugin: 'com.frogermcs.androiddevmetrics'
 
 android {
     def ext = rootProject.extensions.ext
