--- a/application/build.gradle
+++ b/application/build.gradle
@@ -59,7 +59,7 @@ kapt {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.aar'])
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
     rootProject.applicationModuleDependencies.each {
         add(it.configuration, it.dependency, it.options)
     }
