--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,7 +1,7 @@
 ext {
     android = [
             compileSdkVersion: 26,
-            buildToolsVersion: "26.0.1",
+            buildToolsVersion: "26.0.2",
             minSdkVersion    : 17,
             targetSdkVersion : 25,
             versionCode      : 1,
@@ -10,7 +10,7 @@ ext {
 
     /* build plugins versions */
     build = [
-            gradle: "3.0.0-beta6",
+            gradle: "3.0.0-beta7",
             kotlin: "1.1.3-2",
     ]
 
@@ -29,6 +29,7 @@ ext {
     def espressoVersion = '2.2.2'
     def rxJavaVersion = '2.1.0'
     def rxAndroidVersion = '2.0.1'
+    def rxBindingVersion = '2.0.0'
     def okHttpVersion = '3.8.0'
     def leakCanaryVersion = '1.5.1'
     def blockCanaryVersion = '1.5.0'
@@ -57,6 +58,7 @@ ext {
     def smallBangVersion = '0.1.2'
     def hTextViewVersion = '0.1.1'
     def yearClassVersion = '2.0.0'
+    def materialSearchVersion = '1.4.0'
 
     def libs = [
             /* support */
@@ -78,6 +80,7 @@ ext {
             /* rx */
             rxJava                      : [group: 'io.reactivex.rxjava2', name: 'rxjava', version: rxJavaVersion],
             rxAndroid                   : [group: 'io.reactivex.rxjava2', name: 'rxandroid', version: rxAndroidVersion],
+            rxBinding                   : [group: 'com.jakewharton.rxbinding2', name: 'rxbinding-kotlin', version: rxBindingVersion],
             /* networking */
             okHttp                      : [group: 'com.squareup.okhttp3', name: 'okhttp', version: okHttpVersion],
             gson                        : [group: 'com.google.code.gson', name: 'gson', version: gsonVersion],
@@ -112,6 +115,7 @@ ext {
             noiseView                   : [group: 'pl.hypeapp', name: 'noiseview', version: noiseViewVersion],
             smallBang                   : [group: 'hanks.xyz', name: 'smallbang-library', version: smallBangVersion],
             hTextView                   : [group: 'com.hanks', name: 'htextview-evaporate', version: hTextViewVersion],
+            materialSearch              : [group: 'com.miguelcatalan', name: 'materialsearchview', version: materialSearchVersion],
             // For some reason gradle cannot resolve version of this dependency and must be hardcoded in that way.
             androidAnimations           : "com.daimajia.androidanimations:library:$androidAnimationsVersion",
             easingLibrary               : "com.daimajia.easing:library:$easingLibraryVersion"
@@ -176,6 +180,7 @@ ext {
             // rx
             [configuration: "implementation", dependency: libs.rxJava],
             [configuration: "implementation", dependency: libs.rxAndroid],
+            [configuration: "implementation", dependency: libs.rxBinding],
             // test
             [configuration: "testImplementation", dependency: testLibs.junit],
             [configuration: "testImplementation", dependency: testLibs.mockito],
