--- a/application/build.gradle
+++ b/application/build.gradle
@@ -52,10 +52,23 @@ android {
             java.srcDirs += 'src/androidTest/kotlin'
         }
     }
+
+
 }
 
 kapt {
     generateStubs = true
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '25.3.0'
+            }
+        }
+    }
 }
 
 dependencies {
