--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -42,6 +42,16 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ui.features.timecalculator.TimeCalculatorActivity"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
