--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
     repositories {
-        maven { url 'https://maven.google.com' }
+        maven { url 'https://dl.google.com/dl/android/maven2/' }
         jcenter()
+        google()
     }
     dependencies {
         apply from: 'dependencies.gradle'
@@ -15,7 +16,6 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
-
         mavenCentral()
     }
 }
@@ -27,6 +27,7 @@ subprojects {
         mavenCentral()
         maven { url "https://jitpack.io" }
         maven { url "http://dl.bintray.com/arturbosch/code-analysis" }
+        google()
     }
     configurations {
         detekt
