--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,12 @@ allprojects {
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        maven { url "https://jitpack.io" }
         mavenCentral()
+        maven {
+            url 'http://www.idescout.com/maven/repo/'
+            name 'IDEScout, Inc.'
+        }
     }
 }
 
