Update: gradle, kotlin. Fix: AndroidDevMetrics issue with D8 compiler

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,6 @@ org.gradle.jvmargs=-Xmx3072m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryErro
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+android.enableD8=false
 USERNAME_EPISODIE_API="EpisodieAndroidClient"
 PASSWORD_EPISODIE_API="MTIzIzI2MTI2MSZwOHA2OTky"
