--- a/application/src/main/AndroidManifest.xml
+++ b/application/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:theme="@style/EpisodieTheme"
         tools:replace="android:label">
 
-        <activity android:name=".ui.features.mainfeed.MainFeedActivity">
+        <activity
+            android:name=".ui.features.mainfeed.MainFeedActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
